--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 #########
 #Exclude all
 #########
-*
-!*/
 !.gitignore
 ###########################################################################
 ##	VIVADO
@@ -117,3 +115,13 @@ compile.sh
 **/*.sim
 **/*.ip_user_files
 **/*.hw
+
+# Bitstreams and programming files
+!*.bit
+!*.bin
+!*.mcs
+
+# SDK/Vitis files
+!*.hdf
+!*.sdk
+!*.bsp
